--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Personal Projects<br />
-											by Liam</h1>
+											<h1>Personal Site<br />
+											...</h1>
 											<p>...</p>
 										</header>
 										<p>I'm a Northeastern University second year student.</p>
