index small fixes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 											...</h1>
 											<p>...</p>
 										</header>
-										<p>I'm a Northeastern University second year student.</p>
+										<p>I'm a Northeastern University second year Computer Science Major.</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
