--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Header</strong> by HTML5 UP</a>
+									<!-- <a href="index.html" class="logo"><strong>Header</strong> by HTML5 UP</a> -->
 									<ul class="icons">
 										<li><a href="https://www.linkedin.com/in/liam-lawless-a26a44200/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://github.com/liam-lawless" class="icon brands fa-github"><span class="label">Github</span></a></li>
@@ -37,7 +37,7 @@
 											...</h1>
 											<p>...</p>
 										</header>
-										<p>I'm a Northeastern University second year Computer Science Major.</p>
+										<p>I'm a Northeastern University second year Computer Science Major. Exploring different algorithms and mathematical principles.</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
@@ -169,26 +169,13 @@
 										<li>
 											<span class="opener">Sorting</span>
 											<ul>
-												<li><a href="#">Bubble Sort</a></li>
-												<li><a href="#">Quick Sort</a></li>
 												<li><a href="#">Bogo Sort</a></li>
+												<li><a href="sort_bubble.html">Bubble Sort</a></li>
 												<li><a href="#">Merge Sort</a></li>
+												<li><a href="#">Quick Sort</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
-										<li>
-											<span class="opener">Another Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+										<li><a href="#">Example</a></li>
 									</ul>
 								</nav>
 
@@ -221,7 +208,7 @@
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p>get_in_touch_para</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">lawless.l@northeastern.edu</a></li>
 										<!-- <li class="icon solid fa-phone">(000) 000-0000</li> -->
