--- a/generic.html
+++ b/generic.html
@@ -99,7 +99,6 @@
 										<li>
 											<span class="opener">Sorting</span>
 											<ul>
-												<li><a href="#">Bogo Sort</a></li>
 												<li><a href="sort_bubble.html">Bubble Sort</a></li>
 												<li><a href="#">Merge Sort</a></li>
 												<li><a href="#">Quick Sort</a></li>
@@ -147,9 +146,9 @@
 								</section>
 
 							<!-- Footer -->
-								<footer id="footer">
+								<!-- <footer id="footer">
 									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-								</footer>
+								</footer> -->
 
 						</div>
 					</div>
