added merge and bogo sort

--- a/generic.html
+++ b/generic.html
@@ -99,8 +99,9 @@
 										<li>
 											<span class="opener">Sorting</span>
 											<ul>
+												<li><a href="sort_bogo.html">Bogo Sort</a></li>
 												<li><a href="sort_bubble.html">Bubble Sort</a></li>
-												<li><a href="#">Merge Sort</a></li>
+												<li><a href="sort_merge.html">Merge Sort</a></li>
 												<li><a href="#">Quick Sort</a></li>
 											</ul>
 										</li>
@@ -109,7 +110,7 @@
 								</nav>
 
 							<!-- Section -->
-								<section>
+								<!-- <section>
 									<header class="major">
 										<h2>Ante interdum</h2>
 									</header>
@@ -130,7 +131,7 @@
 									<ul class="actions">
 										<li><a href="#" class="button">More</a></li>
 									</ul>
-								</section>
+								</section> -->
 
 							<!-- Section -->
 								<section>
