--- a/index.html
+++ b/index.html
@@ -168,9 +168,10 @@
 										<li><a href="elements.html">Elements</a></li>
 										<li>
 											<span class="opener">Sorting</span>
-											<ul>												
+											<ul>
+												<li><a href="sort_bogo.html">Bogo Sort</a></li>												
 												<li><a href="sort_bubble.html">Bubble Sort</a></li>
-												<li><a href="#">Merge Sort</a></li>
+												<li><a href="sort_merge.html">Merge Sort</a></li>
 												<li><a href="#">Quick Sort</a></li>
 											</ul>
 										</li>
@@ -214,11 +215,6 @@
 										<li class="icon solid fa-home">Boston, MA</li>
 									</ul>
 								</section>
-
-							<!-- Footer -->
-								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-								</footer>
 
 						</div>
 					</div>
