Finished merge sort and added code for quick sort

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 												<li><a href="sort_bogo.html">Bogo Sort</a></li>												
 												<li><a href="sort_bubble.html">Bubble Sort</a></li>
 												<li><a href="sort_merge.html">Merge Sort</a></li>
-												<li><a href="#">Quick Sort</a></li>
+												<li><a href="sort_quick.html">Quick Sort</a></li>
 											</ul>
 										</li>
 										<li><a href="#">Example</a></li>
