--- a/sort_bubble.html
+++ b/sort_bubble.html
@@ -131,6 +131,11 @@ void bubbleSort(int[] array) {
 										</table>
 									</div>
 
+									<img style="display: block; margin-right: auto; margin-left: auto; border:6px solid rgb(245, 246, 247);" src="images/bubblesort_runtime.png" alt="" width="661" height="384" />
+									<footer id="footer">
+										<p class="copyright" style="text-align:center">Image: happycoders.eu</p>
+									</footer>
+
 								</section>
 
 								<!-- Footer -->
@@ -169,7 +174,7 @@ void bubbleSort(int[] array) {
 												<li><a href="sort_bogo.html">Bogo Sort</a></li>
 												<li><a href="sort_bubble.html">Bubble Sort</a></li>
 												<li><a href="sort_merge.html">Merge Sort</a></li>
-												<li><a href="#">Quick Sort</a></li>
+												<li><a href="sort_quick.html">Quick Sort</a></li>
 											</ul>
 										</li>
 										<li><a href="#">Example</a></li>
