--- a/sort_bogo.html
+++ b/sort_bogo.html
@@ -130,8 +130,8 @@ void shuffle(int[] array) {
 											<ul>
 												<li><a href="sort_bogo.html">Bogo Sort</a></li>
 												<li><a href="sort_bubble.html">Bubble Sort</a></li>
-												<li><a href="#">Merge Sort</a></li>
-												<li><a href="#">Quick Sort</a></li>
+												<li><a href="sort_merge.html">Merge Sort</a></li>
+												<li><a href="sort_quick.html">Quick Sort</a></li>
 											</ul>
 										</li>
 										<li><a href="#">Example</a></li>
